--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "modularscale-sass": "^3.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.0",
-    "postcss-merge-rules": "^5.0.2",
     "readdirp": "^3.6.0",
     "sass": "^1.35.1",
     "to-regex-range": "^5.0.1"
@@ -27,12 +26,16 @@
     "gzipper": "^5.0.0",
     "postcss": "^8.3.5",
     "postcss-cli": "^8.3.1",
-    "postcss-combine-media-query": "^1.0.1"
+    "postcss-combine-media-query": "^1.0.1",
+    "postcss-merge-rules": "^5.0.2",
+    "postcss-merge-rules-plus": "^1.0.2",
+    "postcss-merge-selectors": "^0.0.6"
   },
   "scripts": {
-    "scss": "sass -w --load-path=node_modules/ src/scss/UC.scss dist/css/UC.css ",
-    "postcss": "postcss dist/css/UC.css > dist/css/UC.min.css","gzipper": "gzipper",
-    "compress": "gzipper compress ./dist"
+    "scss": "sass  --load-path=node_modules/ src/scss/UC.scss dist/css/UC.css -w",
+    "postcss": "postcss ./dist/css/UC.css -o ./dist/css/UC.min.css -w",
+    "gzipper": "gzipper",
+    "compress": "gzipper compress ./dist/css/Uc.min.css"
   },
   "repository": {
     "type": "git",
