--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "scss": "sass  --load-path=node_modules/ src/scss/UC.scss dist/css/UC.css -w",
+    "scssOverload": "sass  --load-path=node_modules/ src/scss/UC.scss dist/css/UC.css -w",
     "postcss": "postcss ./dist/css/UC.css -o ./dist/css/UC.min.css -w",
     "gzipper": "gzipper",
     "compress": "gzipper compress ./dist/css/Uc.min.css"
